[DOC] Test framework future works

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -418,3 +418,27 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	title        = {{P}ub/{S}ub {M}essaging},
 }
 
+@misc{Sonobuoy,
+	author       = {{Sonobuoy}},
+	howpublished = {\url{https://sonobuoy.io/} (accessed at 08/05/2022)},
+	title        = {{S}onobuoy},
+}
+
+@misc{SonobuoyReliabilityScanner,
+	author       = {{VMWare Tanzu}},
+	howpublished = {\url{https://github.com/vmware-tanzu/sonobuoy-plugins/tree/main/reliability-scanner} (accessed at 08/05/2022)},
+	title        = {{S}onobuoy {R}eliability {S}canner},
+}
+
+@misc{Gremlin,
+	author       = {{Gremlin Inc.}},
+	howpublished = {\url{https://www.gremlin.com/} (accessed at 08/05/2022)},
+	title        = {{G}remlin},
+}
+
+@misc{Litmus,
+	author       = {{LitmusChaos Authors}},
+	howpublished = {\url{https://docs.litmuschaos.io/docs/introduction/what-is-litmus/} (accessed at 08/05/2022)},
+	title        = {{W}hat is {L}itmus},
+}
+
