--- a/docs/content/sample-application.tex
+++ b/docs/content/sample-application.tex
@@ -47,7 +47,7 @@ components should provide an interface that other tools can use to collect metri
 
 
 %----------------------------------------------------------------------------
-\subsection{Architecture}
+\subsection{Architecture} \label{sample-app-arch}
 %----------------------------------------------------------------------------
 
 Although the aim of the sample application is to attempt to provide a generalized system to fit many use-cases without limiting possibilities, when it comes to architectural design, it is indispensable to create the structure of the system with a specific use-case in mind. But with a fairly common use case, the fundamental goal can be roughly preserved.
