--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -44,6 +44,7 @@
 % Table of contents and the main text
 %--------------------------------------------------------------------------------------
 \begin{document}
+\onehalfspacing
 
 \pagenumbering{gobble}
 
