--- a/docs/content/introduction.tex
+++ b/docs/content/introduction.tex
@@ -21,9 +21,9 @@ Kubernetes became the de facto standard for managing cloud based systems as it p
 \section{Motivation}
 %----------------------------------------------------------------------------
 
-Applications running in the cloud are inherently exposed to a quite dynamic environment. The infrastructure layer under the application can frequently change causes different kind of anomalies and failures on the application level. In most cases, the physical hardware on which the software of a cloud tenant -- a company or individual customer, who uses a set of services at a cloud provider -- runs is not accessible for the users. This means that the implementation of fault tolerant and justifiably reliable applications must be handled on higher abstraction layers, that are available for cloud users.
+Applications running in the cloud are inherently exposed to a quite dynamic environment. The infrastructure layer under the application can frequently change causing different kind of anomalies and failures on the application level. In most cases, the physical hardware on which the software of a cloud tenant -- a company or individual customer, who uses a set of services at a cloud provider -- runs is not accessible for the users. This means that the implementation of fault tolerant and justifiably reliable applications must be handled on higher abstraction layers, that are available for cloud users.
 
-As the number of cloud based mission critical systems constantly rise, it is indispensable to provide various techniques to be able guarantee a given level of dependability of these applications. The Kubernetes ecosystem support many building blocks to achieve this goal, however, arranging and integrating these units to form a practically usable and efficient structure can be a daunting tasks.
+As the number of cloud based mission critical systems constantly rise, it is indispensable to provide various techniques to be able guarantee a given level of dependability of these applications. The Kubernetes ecosystem supports many building blocks to achieve this goal, however, arranging and integrating these units to form a practically usable and efficient structure can be a daunting tasks.
 
 %\begin{itemize}
 %	\item dependability of cloud based applications should be constantly monitored and guaranteed
