[DOC] Summary wip and notes

--- a/docs/content/summary.tex
+++ b/docs/content/summary.tex
@@ -2,8 +2,35 @@
 \chapter{Summary}
 %----------------------------------------------------------------------------
 
+The ever transforming market and the conceptual changes of software delivery drive companies to swiftly move their IT infrastructure and services into the cloud. Cloud computing offers countless advantages both for enterprises and users, however, adopting cloud solutions the right way is not an easy task. There are many pitfalls concerning application architecture, implementation, deployment and maintenance that can be easily overseen even by experienced system developers. As more and more critical applications are migrated into the cloud, companies have to be sure, that their systems are able to function reliably to avoid severe losses in case of unexpected failures. This demands the existence of various tools that can consequently check the dependability of highly distributed and dynamic applications and reveal their weaknesses.
+
+The thesis work first introduces Kubernetes, the widely popular open-source platform for containerized workload orchestration in the cloud, describing its main features and concepts used throughout this project.
+
+Following that, the design and implementation of a sample application is presented which is later during the dependability analyses. The sample application is a small, Kubernetes based distributed system, composed of both stateful and stateless components that support scalability. It conforms to the most important microservice requirements like containerization, separation of responsibility and observability.
+
+% test framework, dependability metrics, capabilities, load generation, fault injection, monitoring, baseline measurement and evaluation / analysis
+Afterwards, the document ...
+
 \begin{itemize}
-	\item
-	\item the importance of asynchronous funtionality (see io and network-delay fault profile analysis)
-	\item adding third party tools to the system to solve a problem may introduce other complexities
+	\item test framework, dependability metrics, capabilities, load generation, fault injection, monitoring, baseline measurement and evaluation / analysis
+	\item enhancements, possible parts / layers to make improvements design, implementation
+	\item analysis and evaluation of the enhancements
+	\item possible future developments
 \end{itemize}
+
+% enhancements, possible parts / layers to make improvements design, implementation
+
+% analysis and evaluation of the enhancements
+
+% possible future developments
+
+The thesis ends with a brief discussion about the related works ...
+
+
+
+
+%\begin{itemize}
+%	\item
+%	\item the importance of asynchronous funtionality (see io and network-delay fault profile analysis)
+%	\item adding third party tools to the system to solve a problem may introduce other complexities
+%\end{itemize}
