[DOC] Change document type in declaration

--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -26,7 +26,7 @@
 \newcommand{\vikcim}{Application-specific fine-tuning of a Kubernetes-based infrastructure to increase fault tolerance-related metrics} % Cím
 \newcommand{\viktanszek}{\bmemit} % Tanszék
 \newcommand{\vikdoktipus}{\msc} % Dokumentum típusa (\bsc vagy \msc)
-\newcommand{\vikmunkatipusat}{szakdolgozatot} % a "hallgató nyilatkozat" részhez: szakdolgozatot vagy diplomatervet
+\newcommand{\vikmunkatipusat}{diplomatervet} % a "hallgató nyilatkozat" részhez: szakdolgozatot vagy diplomatervet
 
 %\input{include/tdk-variables}
 \newcommand{\szerzoMeta}{\vikszerzoVezeteknev{} \vikszerzoKeresztnev} % egy szerző esetén
