--- a/docs/content/abstract.tex
+++ b/docs/content/abstract.tex
@@ -20,7 +20,13 @@ TODO
 %----------------------------------------------------------------------------
 \chapter*{Abstract}\addcontentsline{toc}{chapter}{Abstract}
 
-TODO
+Cloud computing is everywhere. From individual users to the biggest enterprises, everyone wishes to make benefit from the countless advantages that the cloud offers. However, application developers and other IT professionals know that despite its apparent simplicity, the Cloud is not easy. All the components are constantly on the move, changing their state, systems fail unexpectedly while the user workload can quickly soar off the charts or disappear completely. How is it possible to create reliable, fault-tolerant cloud-based applications under these conditions?
+
+Kubernetes became the de facto standard for deploying and managing containerized microservice architectures both in public and private clouds. It allows developers to efficiently orchestrate their workload, but this high abstraction layer results in more complex ways of measuring and guaranteeing system dependability.
+
+This thesis work first introduces Kubernetes, its most important functions and ideas, along with other popular technologies and concepts in this ecosystem. It defines a way how dependability metrics in distributed systems can be measured. This is demonstrated with the help of a custom implemented Kubernetes based sample application of which the design and implementation are well described. In order to be able to measure the dependability characteristics of the before mentioned application, a test framework was created with fault-injection capabilities. Afterwards, the possible alternatives to improve dependability in a Kubernetes-based environment are explored and illustrated with two implemented examples. The effects of these enhancements are assessed with the test framework and the results are evaluated and displayed.
+
+The document ends with a few suggestions and ideas for future developments and with a brief review of the related works of this thesis project which try to solve similar problems and use-cases as encountered during this discussion.
 
 
 \vfill
