[DOC] Consolidate bibliography 'accessed at'

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -1,133 +1,133 @@
 @misc{Docker,
 	author       = {{Docker}},
-	howpublished = {\url{https://www.docker.com/}},
-	title        = {Docker (01/12/2021)},
+	howpublished = {\url{https://www.docker.com/} (accessed at 01/12/2021)},
+	title        = {Docker},
 }
 
 @misc{SpringBoot,
 	author       = {{Spring}},
-	howpublished = {\url{https://spring.io/projects/spring-boot}},
-	title        = {Spring {B}oot (01/12/2021)},
+	howpublished = {\url{https://spring.io/projects/spring-boot} (accessed at 01/12/2021)},
+	title        = {Spring {B}oot},
 }
 
 @misc{SpringDataJPA,
 	author       = {{Spring}},
-	howpublished = {\url{https://spring.io/projects/spring-data-jpa}},
-	title        = {Spring {D}ata {JPA} (01/12/2021)},
+	howpublished = {\url{https://spring.io/projects/spring-data-jpa} (accessed at 01/12/2021)},
+	title        = {Spring {D}ata {JPA}},
 }
 
 @misc{JMS,
 	author       = {{Oracle}},
-	howpublished = {\url{https://www.oracle.com/java/technologies/java-message-service.html}},
-	title        = {Java {M}essage {S}ervice ({JMS}) (01/12/2021)},
+	howpublished = {\url{https://www.oracle.com/java/technologies/java-message-service.html} (accessed at 01/12/2021)},
+	title        = {Java {M}essage {S}ervice ({JMS})},
 }
 
 @misc{JMSGuide,
 	author       = {{Spring}},
-	howpublished = {\url{https://spring.io/guides/gs/messaging-jms/}},
-	title        = {Messaging with {JMS} (01/12/2021)},
+	howpublished = {\url{https://spring.io/guides/gs/messaging-jms/} (accessed at 01/12/2021)},
+	title        = {Messaging with {JMS}},
 }
 
 @misc{ThesisRepo,
 	author       = {{martonorova}},
-	howpublished = {\url{https://github.com/martonorova/msc-onlab}},
-	title        = {Thesis repository (01/12/2021)},
+	howpublished = {\url{https://github.com/martonorova/msc-onlab} (accessed at 01/12/2021)},
+	title        = {Thesis repository},
 }
 
 @misc{Micrometer,
 	author       = {{Pivotal Software, Inc.}},
-	howpublished = {\url{https://micrometer.io/}},
-	title        = {Micrometer (02/12/2021)},
+	howpublished = {\url{https://micrometer.io/} (accessed at 02/12/2021)},
+	title        = {Micrometer},
 }
 
 @misc{ActiveMQ,
 	author       = {{Apache}},
-	howpublished = {\url{https://activemq.apache.org/}},
-	title        = {Apache {A}ctive{MQ} (02/12/2021)},
+	howpublished = {\url{https://activemq.apache.org/} (accessed at 02/12/2021)},
+	title        = {Apache {A}ctive{MQ}},
 }
 
 @misc{MySQL,
 	author       = {{Oracle}},
-	howpublished = {\url{https://www.mysql.com/}},
-	title        = {My{SQL} (02/12/2021)},
+	howpublished = {\url{https://www.mysql.com/} (accessed at 02/12/2021)},
+	title        = {My{SQL}},
 }
 
 @misc{EKS,
 	author       = {{Amazon Web Services}},
-	howpublished = {\url{https://aws.amazon.com/eks/}},
-	title        = {Amazon {E}lastic {K}ubernetes {S}ervice ({EKS}) (08/12/2021)},
+	howpublished = {\url{https://aws.amazon.com/eks/} (accessed at 08/12/2021)},
+	title        = {Amazon {E}lastic {K}ubernetes {S}ervice ({EKS})},
 }
 
 @misc{Click,
 	author       = {{Pallets}},
-	howpublished = {\url{https://click.palletsprojects.com/en/8.0.x/}},
-	title        = {Click (08/12/2021)},
+	howpublished = {\url{https://click.palletsprojects.com/en/8.0.x/} (accessed at 08/12/2021)},
+	title        = {Click},
 }
 
 @misc{Locust,
 	author       = {{Locust}},
-	howpublished = {\url{https://locust.io/}},
-	title        = {Locust (08/12/2021)},
+	howpublished = {\url{https://locust.io/} (accessed at 08/12/2021)},
+	title        = {Locust},
 }
 
 @misc{ChaosMeshChart,
 	author       = {{Chaos Mesh}},
-	howpublished = {\url{https://github.com/chaos-mesh/chaos-mesh/tree/master/helm/chaos-mesh}},
-	title        = {Chaos {M}esh {H}elm {C}hart (08/12/2021)},
+	howpublished = {\url{https://github.com/chaos-mesh/chaos-mesh/tree/master/helm/chaos-mesh} (accessed at 08/12/2021)},
+	title        = {Chaos {M}esh {H}elm {C}hart},
 }
 
 @misc{PrometheusChart,
 	author       = {{Prometheus Monitoring Community}},
-	howpublished = {\url{https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus}},
-	title        = {Prometheus {H}elm {C}hart (08/12/2021)},
+	howpublished = {\url{https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus} (accessed at 08/12/2021)},
+	title        = {Prometheus {H}elm {C}hart},
 }
 
 @misc{PrometheusAdapterChart,
 	author       = {{Prometheus Monitoring Community}},
-	howpublished = {\url{https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-adapter}},
-	title        = {Prometheus {A}dapter {H}elm {C}hart (08/12/2021)},
+	howpublished = {\url{https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-adapter} (accessed at 08/12/2021)},
+	title        = {Prometheus {A}dapter {H}elm {C}hart},
 }
 
 @misc{BlackboxExporterChart,
 	author       = {{Prometheus Monitoring Community}},
-	howpublished = {\url{https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-blackbox-exporter}},
-	title        = {Prometheus {B}lackbox {E}xporter {H}elm {C}hart (08/12/2021)},
+	howpublished = {\url{https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-blackbox-exporter} (accessed at 08/12/2021)},
+	title        = {Prometheus {B}lackbox {E}xporter {H}elm {C}hart},
 }
 
 @misc{GrafanaChart,
 	author       = {{Grafana Labs}},
-	howpublished = {\url{https://github.com/grafana/helm-charts/tree/main/charts/grafana}},
-	title        = {Grafana {H}elm {C}hart (08/12/2021)},
+	howpublished = {\url{https://github.com/grafana/helm-charts/tree/main/charts/grafana} (accessed at 08/12/2021)},
+	title        = {Grafana {H}elm {C}hart},
 }
 
 @misc{Jenkins,
 	author       = {{Jenkins project}},
-	howpublished = {\url{https://www.jenkins.io/}},
-	title        = {Jenkins (09/12/2021)},
+	howpublished = {\url{https://www.jenkins.io/} (accessed at 09/12/2021)},
+	title        = {Jenkins},
 }
 
 @misc{Kafka,
 	author       = {{Apache}},
-	howpublished = {\url{https://kafka.apache.org/}},
-	title        = {Kafka (09/12/2021)},
+	howpublished = {\url{https://kafka.apache.org/} (accessed at 09/12/2021)},
+	title        = {Kafka},
 }
 
 @misc{ZooKeeper,
 	author       = {{Apache}},
-	howpublished = {\url{https://zookeeper.apache.org/}},
-	title        = {Zoo{K}eeper (10/12/2021)},
+	howpublished = {\url{https://zookeeper.apache.org/} (accessed at 10/12/2021)},
+	title        = {Zoo{K}eeper},
 }
 
 @misc{KafkaExporter,
 	author       = {{Daniel (Shijun) Qian}},
-	howpublished = {\url{https://github.com/danielqsj/kafka_exporter}},
-	title        = {Kafka {E}xporter (10/12/2021)},
+	howpublished = {\url{https://github.com/danielqsj/kafka_exporter} (accessed at 10/12/2021)},
+	title        = {Kafka {E}xporter},
 }
 
 @misc{SpringKafkaGuide,
 	author       = {{Baeldung}},
-	howpublished = {\url{https://www.baeldung.com/spring-kafka}},
-	title        = {Intro to {A}pache {K}afka with {S}pring (10/12/2021)},
+	howpublished = {\url{https://www.baeldung.com/spring-kafka} (accessed at 10/12/2021)},
+	title        = {Intro to {A}pache {K}afka with {S}pring},
 }
 
 @techreport{AboveTheClouds,
@@ -148,8 +148,8 @@
 
 @misc{MicroservicesMF,
 	author		 = {Martin Fowler},
-	howpublished = {\url{https://martinfowler.com/articles/microservices.html}},
-	title        = {Microservices (23/01/2022)}
+	howpublished = {\url{https://martinfowler.com/articles/microservices.html} (accessed at 23/01/2022)},
+	title        = {Microservices}
 }
 
 @inproceedings{ImplPatternsMicrosServices,
@@ -178,7 +178,7 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 
 @misc{DependabilityBMEMIT,
 	author		 = {István Majzik},
-	howpublished = {\url{https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/oktat%C3%A1s/bsc-t%C3%A1rgyak/informatikai-rendszertervez%C3%A9s/20/09-RETE-Safety-Requirements.pdf}},
+	howpublished = {\url{https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/oktat%C3%A1s/bsc-t%C3%A1rgyak/informatikai-rendszertervez%C3%A9s/20/09-RETE-Safety-Requirements.pdf} (accessed at 23/01/2022)},
 	title        = {Safety Requirements},
 }
 
