[DOC] Grammar fixes

--- a/docs/content/abstract.tex
+++ b/docs/content/abstract.tex
@@ -20,7 +20,7 @@ TODO
 %----------------------------------------------------------------------------
 \chapter*{Abstract}\addcontentsline{toc}{chapter}{Abstract}
 
-Cloud computing is everywhere. From individual users to the biggest enterprises, everyone wishes to make benefit from the countless advantages that the cloud offers. However, application developers and other IT professionals know that despite its apparent simplicity, the Cloud is not easy. All the components are constantly on the move, changing their state, systems fail unexpectedly while the user workload can quickly soar off the charts or disappear completely. How is it possible to create reliable, fault-tolerant cloud-based applications under these conditions?
+Cloud computing is everywhere. From individual users to the biggest enterprises everyone wishes to make benefit from the countless advantages that the cloud offers. However, application developers and other IT professionals know that despite its apparent simplicity the cloud is not easy. All the components are constantly on the move, changing their state, systems fail unexpectedly while the user workload can quickly soar off the charts or disappear completely. How is it possible to create reliable, fault-tolerant cloud-based applications under these conditions?
 
 Kubernetes became the de facto standard for deploying and managing containerized microservice architectures both in public and private clouds. It allows developers to efficiently orchestrate their workload, but this high abstraction layer results in more complex ways of measuring and guaranteeing system dependability.
 
