[DOC] Test framework overview

--- a/docs/content/test-framework.tex
+++ b/docs/content/test-framework.tex
@@ -2,13 +2,13 @@
 \chapter{Test Framework} \label{test-framework}
 %----------------------------------------------------------------------------
 
-This chapter presents the design and implementation of the test framework that facilitates the automatic deployment of the sample application and running the measurements to determine the dependability metrics of the system.
+This chapter presents the design and implementation of the test framework that enables assessing the dependability metrics of the sample application. The framework facilitates conducting measurements to get the initial dependability characteristics of the application. The measurements are executed in parallel with various cases of fault injection scenarios while constantly collecting dependability metrics. These experiments can then be rerun with multiple versions of the software to compare the effects of different implementations on dependability.
 
 %----------------------------------------------------------------------------
 \section{Introduction}
 %----------------------------------------------------------------------------
 
-Now, that the sample application is ready, it is time to examine its robustness. The goals of the thesis project included measuring the dependability of the sample application with optional fault injection to simulate possible real-world anomalies. The following sections present the aspects of the design and the construction of a framework that enables collecting dependability metrics and injecting failure scenarios into the sample application (see Section \ref{test-framework-design}). As a result these considerations, a test framework was created using various technologies (Python, Chaos Mesh, Prometheus, Jenkins, etc.) that can be used to conduct highly configurable and reproducible dependability analyses of the sample application. The implementation of the framework is discussed in details in Section \ref{test-framework-impl}. The created framework was then used to execute initial measurements determining the characteristics of the system in its original state (see Section \ref{baseline-results}).
+Now, that the sample application is ready, it is time to examine its robustness. The goals of the thesis project included measuring the dependability of the sample application with optional fault injection to simulate possible real-world anomalies. The following sections present the aspects of the design and the construction of a framework that enables collecting dependability metrics and injecting failure scenarios into the sample application (see Section \ref{test-framework-design}). As a result of these considerations, a test framework was created using various technologies (Python, Chaos Mesh, Prometheus, Jenkins, etc.) that can be used to conduct highly configurable and reproducible dependability analyses of the sample application. The implementation of the framework is discussed in details in Section \ref{test-framework-impl}. The created framework was then used to execute initial measurements determining the characteristics of the system in its original state (see Section \ref{baseline-results}).
 
 %\begin{itemize}
 %	\item what do we want? - measure the dependability of the application and inject faults into the system in an automated way
